--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en"><head>
-	<title>Login V16</title>
+	<title>Login form CNPM</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 <!--===============================================================================================-->	
@@ -32,7 +32,10 @@
 		<div class="container-login100" style="background-image: url('images/bg-01.jpg');">
 			<div class="wrap-login100 p-t-30 p-b-50">
 				<span class="login100-form-title p-b-41">
-					Account Login
+					Login Form (Dương Nhật Hào - 51703077)
+				</span>
+				<span class="login100-form-title p-b-41">
+					Login Form (Ngô Quang Trường - 51703213)
 				</span>
 				<form class="login100-form validate-form p-b-33 p-t-5">
 
